data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2281.wast
;; 2. **Conditional Branch Always False**:    - Create a block with a `br_if 0` instruction driven by a condition expected to be true (e.g., `i32.const 1`). Ensure the instruction within the block is executed.        Constraints: This test verifies if the `br_if` instruction evaluates the true condition correctly to branch and does not skip block instructions.

(assert_invalid
  (module (func $conditional_branch_always_false
    (block (block (br_if 0 (i32.const 1)) (i32.const 0)))
  ))
  "type mismatch"
)